--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,13 @@
 # Copy from .env.local on the Vercel dashboard
 # https://nextjs.org/learn/dashboard-app/setting-up-your-database#create-a-postgres-database
+POSTGRES_URL=
+POSTGRES_PRISMA_URL=
+POSTGRES_URL_NON_POOLING=
+POSTGRES_USER=
+POSTGRES_HOST=
+POSTGRES_PASSWORD=
+POSTGRES_DATABASE=
 
-# POSTGRES_URL="postgres://default:RlW6ZCaLMym2@ep-cool-dew-82268269-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb"
-# POSTGRES_PRISMA_URL="postgres://default:RlW6ZCaLMym2@ep-cool-dew-82268269-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb?pgbouncer=true&connect_timeout=15"
-# POSTGRES_URL_NON_POOLING="postgres://default:RlW6ZCaLMym2@ep-cool-dew-82268269.us-east-1.postgres.vercel-storage.com:5432/verceldb"
-# POSTGRES_USER="default"
-# POSTGRES_HOST="ep-cool-dew-82268269-pooler.us-east-1.postgres.vercel-storage.com"
-# POSTGRES_PASSWORD="RlW6ZCaLMym2"
-# POSTGRES_DATABASE="verceldb"
-# AUTH_SECRET=uLTCZLMWAgf17FQO9f9oWYlqD8pQQLA2wwpVomyFidg=
+# `openssl rand -base64 32`
+AUTH_SECRET=
+AUTH_URL=http://localhost:3000/api/auth
